Flare v1.06 (WIP, link soon)

Engine features:

* Allow modders to define a target screen DPI for resolution scaling.



Flare v1.05 (http://flarerpg.org/index.php/2018/04/30/flare-1-05/)

Engine features:

* Tileset definitions now support multiple images. (Justin Jacobs)
* Display a message when unable to use a consumable item from the inventory. (Justin Jacobs)
* Add a hint to consumable/book tooltips to expose their interactable nature. (Justin Jacobs)
* Add ability to prevent certain powers from being placed on the actionbar. (Justin Jacobs)
* Multiple entries of "requires_item" and "requires_equipped_item" are now supported for Powers. (Justin Jacobs)
* Add "keep_buyback_on_map_change" to engine/misc.txt to disable saving the buyback between maps. (Justin Jacobs)
* Add "reward_loot" and "reward_loot_count" to Events for rewarding via loot tables. (Justin Jacobs)
* Support hidding the developer console title label. (Justin Jacobs)
* Mod-level default keybinding support added. (Justin Jacobs)
* Improved developer mode with inspection cursor. (Justin Jacobs)
* Passive powers can now continuously cast their post_power. (Justin Jacobs)

Engine fixes:

* Fixed incorrect render order for some objects; aka "character partly hidden by front of tent". (Justin Jacobs)
* Fix stats/powers not updating when changing equipment in some cases. (Justin Jacobs)
* Prevent auto-equipping items if they would cause existing items to be unequipped. (Justin Jacobs)
* Fix revive effect not being applied when the player has zero HP. (Justin Jacobs)
* Removed unused color key attribute parsing from tileset definitions. (Justin Jacobs)
* Fixed building on FreeBSD. (Justin Jacobs)

Translation updates:

* Spanish (es) update (Eric R)
* Scottish Gaelic (gd) update (GunChleoc)
* Italian (it) update (MOB2)
* Polish (pl) update (Pawonashi)
* Portuguese (pt) update (Rui)
* Russian (ru) update (Ademaro)
* Ukrainian (uk) update (Sergiy Borodych)


